buildscript {
    ext {
        springBootVersion = '2.2.3.RELEASE'
    }

    repositories {
        mavenCentral()
        maven { url 'https://plugins.gradle.org/m2/' }
    }

    dependencies {
        classpath gradleApi()
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
        classpath 'com.bmuschko:gradle-docker-plugin:6.4.0'
    }
}

plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '2.2.3.RELEASE'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id 'org.liquibase.gradle' version '2.0.3'
}

ext {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    postgresContainerVersion = '12.3-alpine'
    rabbitMQContainerVersion = '3-alpine'
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'io.spring.dependency-management'

    repositories {
        mavenCentral()
        maven { url 'https://plugins.gradle.org/m2/' }
    }

    dependencies {
        implementation 'org.projectlombok:lombok:1.18.12'
        annotationProcessor 'org.projectlombok:lombok:1.18.12'

        testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
        testImplementation 'org.mockito:mockito-core:2.10.0'
    }
}

subprojects {
    apply plugin: 'java-library'
}

group = 'ai.salesfox'
version = 'latest'
mainClassName = 'ai.salesfox.portal.PortalApplication'

apply from: 'buildSrc/tasks.gradle'

dependencies {
    implementation project(':common')
    implementation project(':integration-scribeless')
    implementation project(':integration-shipstation')

    // Spring
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    // Utilities & Integrations
    implementation platform('software.amazon.awssdk:bom:2.15.2')
    implementation 'software.amazon.awssdk:s3'

    implementation "com.stripe:stripe-java:20.14.0"

    implementation 'org.freemarker:freemarker:2.3.30'
    implementation 'javax.mail:javax.mail-api:1.6.2'
    runtimeOnly 'com.sun.mail:javax.mail:1.6.2'

    // Extras TODO determine which of these can be removed
    implementation 'io.springfox:springfox-swagger2:2.8.0'
    implementation 'io.springfox:springfox-swagger-ui:2.8.0'

    // Database
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.liquibase:liquibase-core'

    if (getGradle().getStartParameter().taskNames.contains('runServer')) {
        runtimeClasspath 'org.springframework.cloud:spring-cloud-starter:2.2.3.RELEASE'
        runtimeClasspath 'org.springframework.boot:spring-boot-devtools'

        // Database
        runtimeClasspath 'org.testcontainers:postgresql:1.15.0-rc2'
        runtimeClasspath "com.playtika.testcontainers:embedded-postgresql:1.78"

        // Message Queue
        runtimeClasspath 'org.testcontainers:rabbitmq:1.15.0'
        runtimeClasspath "com.playtika.testcontainers:embedded-rabbitmq:1.78"
    }
}

test {
    useJUnitPlatform()
}
